# binary_rw

./: '  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: error.rs  filestream.rs  lib.rs  memorystream.rs
src/serde/: deserializer.rs  error.rs  mod.rs  serializer.rs
src/stream/: file.rs  memory.rs  mod.rs  slice.rs
tests/: lib.rs
