[package]
name = "binary_rw"
version = "4.0.0"
authors = ["Mathias Danielsen <mathiasda98@hotmail.com>"]
edition = "2021"

description = "A binary reader/writer library for rust"
repository = "https://github.com/mathias234/binary-rs"
readme = "README.md"
keywords = ["binary", "reader", "writer"]
license = "MIT"

[features]
wasm32 = []

[dependencies]
thiserror = "1"

[dev-dependencies]
anyhow = "1"
