[package]
name = "binary_rw"
version = "4.0.4"
authors = ["Mathias Danielsen <mail@matda.me>"]
edition = "2021"

description = "A binary reader/writer library for rust"
repository = "https://github.com/mathias234/binary_rw"
readme = "README.md"
keywords = ["binary", "reader", "writer"]
license = "MIT"

[features]
wasm32 = [] # Uses u32 for usize operations, use string_len_u32 if you only want to affect how strings are encoded
string_len_u32 = [] # Uses u32 for string lengths instead of usize

[dependencies]
thiserror = "1"

[dev-dependencies]
anyhow = "1"
